# delivery-intelligence-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: default.yaml  development.yaml  production.yaml  staging.yaml
docs/: Phase 2 — Project State Engine  phase_0_foundations.md  phase_1_reliability_and_error_policy.md
docs/.github/: copilot-instructions.md
src/delivery_intelligence/: main.py
src/delivery_intelligence/config/: loader.py  settings.py
src/delivery_intelligence/core/: auth.py  container.py  environment.py  logging.py
src/delivery_intelligence/gitlab/: __init__.py  client.py  exceptions.py  fetchers.py  mappers.py  pagination.py  rate_limiter.py  retry.py  webhooks.py  work_items.py
src/delivery_intelligence/models/: __init__.py  base.py  contributor.py  issue.py  merge_request.py  milestone.py  pipeline.py  project.py
tests/: conftest.py
tests/fixtures/gitlab/: contributor.json  issue.json  merge_request.json  milestone.json  paginated_response.json  pipeline.json  project.json  webhook_issue.json  webhook_merge_request.json  webhook_pipeline.json  webhook_push.json  work_items_response.json
tests/test_config/: test_settings.py
tests/test_core/: test_auth.py  test_container.py  test_environment.py  test_logging.py
tests/test_gitlab/: conftest.py  test_client.py  test_exceptions.py  test_fetchers.py  test_integration.py  test_mappers.py  test_pagination.py  test_rate_limiter.py  test_retry.py  test_webhooks.py  test_work_items.py
tests/test_models/: test_models.py
(+2 files in other folders)
